// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hume > gets all urls from docs config 1`] = `
[
  "dev.hume.ai/intro",
  "dev.hume.ai/docs/introduction/api-key",
  "dev.hume.ai/support",
  "dev.hume.ai/docs/empathic-voice-interface-evi/overview",
  "dev.hume.ai/docs/empathic-voice-interface-evi/quickstart",
  "dev.hume.ai/docs/empathic-voice-interface-evi/configuration",
  "dev.hume.ai/docs/empathic-voice-interface-evi/tool-use",
  "dev.hume.ai/docs/empathic-voice-interface-evi/phone-calling",
  "dev.hume.ai/docs/empathic-voice-interface-evi/prompting",
  "dev.hume.ai/docs/empathic-voice-interface-evi/custom-language-model",
  "dev.hume.ai/docs/empathic-voice-interface-evi/faq",
  "dev.hume.ai/docs/expression-measurement-api/overview",
  "dev.hume.ai/docs/expression-measurement-api/rest",
  "dev.hume.ai/docs/expression-measurement-api/websocket",
  "dev.hume.ai/docs/expression-measurement-api/faq",
  "dev.hume.ai/docs/custom-models-api/overview",
  "dev.hume.ai/docs/custom-models-api/creating-your-dataset",
  "dev.hume.ai/docs/custom-models-api/training-a-custom-model",
  "dev.hume.ai/docs/custom-models-api/evaluating-a-custom-model",
  "dev.hume.ai/docs/custom-models-api/faq",
  "dev.hume.ai/docs/resources/billing",
  "dev.hume.ai/docs/resources/errors",
  "dev.hume.ai/docs/resources/science",
  "dev.hume.ai/docs/resources/use-case-guidelines",
  "dev.hume.ai/docs/resources/privacy",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/list-tools",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/create-tool",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/list-tool-versions",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/create-tool-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/delete-tool",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/update-tool-name",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/get-tool-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/delete-tool-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/tools/update-tool-description",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/list-prompts",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/create-prompt",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/list-prompt-versions",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/create-prompt-verison",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/delete-prompt",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/update-prompt-name",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/get-prompt-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/delete-prompt-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/prompts/update-prompt-description",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/list-configs",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/create-config",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/list-config-versions",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/create-config-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/delete-config",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/update-config-name",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/get-config-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/delete-config-version",
  "dev.hume.ai/reference/empathic-voice-interface-evi/configs/update-config-description",
  "dev.hume.ai/reference/empathic-voice-interface-evi/chats/list-chats",
  "dev.hume.ai/reference/empathic-voice-interface-evi/chats/list-chat-events",
  "dev.hume.ai/reference/empathic-voice-interface-evi/chat-groups/list-chat-groups",
  "dev.hume.ai/reference/empathic-voice-interface-evi/chat-groups/list-chat-group-events",
  "dev.hume.ai/reference/empathic-voice-interface-evi/chat/chat",
  "dev.hume.ai/reference/expression-measurement-api/batch/list-jobs",
  "dev.hume.ai/reference/expression-measurement-api/batch/start-inference-job",
  "dev.hume.ai/reference/expression-measurement-api/batch/get-job-details",
  "dev.hume.ai/reference/expression-measurement-api/batch/get-job-predictions",
  "dev.hume.ai/reference/expression-measurement-api/batch/get-job-artifacts",
  "dev.hume.ai/reference/expression-measurement-api/batch/start-inference-job-from-local-file",
  "dev.hume.ai/reference/expression-measurement-api/stream/stream",
  "dev.hume.ai/reference/custom-models-api/files/list-files",
  "dev.hume.ai/reference/custom-models-api/files/create-files",
  "dev.hume.ai/reference/custom-models-api/files/upload-file",
  "dev.hume.ai/reference/custom-models-api/files/get-file",
  "dev.hume.ai/reference/custom-models-api/files/delete-file",
  "dev.hume.ai/reference/custom-models-api/files/update-file-name",
  "dev.hume.ai/reference/custom-models-api/files/get-file-predictions",
  "dev.hume.ai/reference/custom-models-api/datasets/list-datasets",
  "dev.hume.ai/reference/custom-models-api/datasets/create-dataset",
  "dev.hume.ai/reference/custom-models-api/datasets/get-dataset",
  "dev.hume.ai/reference/custom-models-api/datasets/create-dataset-version",
  "dev.hume.ai/reference/custom-models-api/datasets/delete-dataset",
  "dev.hume.ai/reference/custom-models-api/datasets/list-dataset-versions",
  "dev.hume.ai/reference/custom-models-api/datasets/list-dataset-files",
  "dev.hume.ai/reference/custom-models-api/datasets/get-dataset-version",
  "dev.hume.ai/reference/custom-models-api/datasets/list-dataset-version-files",
  "dev.hume.ai/reference/custom-models-api/models/list-models",
  "dev.hume.ai/reference/custom-models-api/models/get-model-details",
  "dev.hume.ai/reference/custom-models-api/models/update-model-name",
  "dev.hume.ai/reference/custom-models-api/models/list-model-versions",
  "dev.hume.ai/reference/custom-models-api/models/get-model-version",
  "dev.hume.ai/reference/custom-models-api/models/update-model-description",
  "dev.hume.ai/reference/custom-models-api/jobs/start-training-job",
  "dev.hume.ai/reference/custom-models-api/jobs/start-custom-models-inference-job",
  "dev.hume.ai/changelog",
]
`;

exports[`hume > gets navigation root for /docs 1`] = `
{
  "redirect": "intro",
  "type": "redirect",
}
`;

exports[`hume > gets navigation root for /reference 1`] = `
{
  "redirect": "reference/empathic-voice-interface-evi/tools/list-tools",
  "type": "redirect",
}
`;

exports[`hume > gets navigation root for /reference/expression-measurement-api/stream 1`] = `
{
  "redirect": "reference/expression-measurement-api/stream/stream",
  "type": "redirect",
}
`;

exports[`hume > gets navigation root for /support 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": false,
  "icon": undefined,
  "id": "root.uv.docs.docs.introduction.support",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "docs/pages/documentation/introduction/support.mdx",
  "slug": "support",
  "title": "Support",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`hume > gets navigation root for /support 2`] = `undefined`;

exports[`hume > gets navigation root for /support 3`] = `"docs"`;
